<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:id="@+id/ListView"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        tools:ignore="UselessParent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/listImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/fotorohid"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded" />

        <TextView
            android:id="@+id/listName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/listImage"
            android:text="@string/muhammad_rohid_nur_fajrian"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/listTime"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/listName"
            android:text="@string/_220609009"
            android:textColor="@color/black"
            android:textSize="15sp"
            tools:ignore="TextSizeCheck" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:layout_marginTop="80dp"
        tools:ignore="UselessParent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/listImage2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/fotogithriff"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded" />

        <TextView
            android:id="@+id/listName2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/listImage2"
            android:text="@string/ahmad_githriff_nibross_vroticca"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/listTime2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_toEndOf="@id/listName2"
            android:text="@string/_220609006"
            android:textColor="@color/black"
            android:textSize="15sp"
            tools:ignore="TextSizeCheck" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:layout_marginTop="160dp"
        tools:ignore="UselessParent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/listImage3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/fotorifki"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded" />

        <TextView
            android:id="@+id/listName3"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_toEndOf="@id/listImage3"
            android:text="@string/ainur_rifki_pratama"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/listTime3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_toEndOf="@id/listName3"
            android:text="@string/_220609005"
            android:textColor="@color/black"
            android:textSize="15sp"
            tools:ignore="TextSizeCheck" />

    </RelativeLayout>

</RelativeLayout>