<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="77dp"
        tools:ignore="UselessParent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/listImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/fotopakindra"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded" />

        <TextView
            android:id="@+id/listName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/listImage"
            android:text="@string/indra_gita_anugrah"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/listTime"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_toEndOf="@id/listName"
            android:text="@string/_06211707206"
            android:textColor="@color/black"
            android:textSize="15sp"
            tools:ignore="TextSizeCheck" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:layout_marginTop="80dp"
        tools:ignore="UselessParent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/listImage2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/fotopakmahad"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded" />

        <TextView
            android:id="@+id/listName2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/listImage2"
            android:text="@string/mahad_wicaksono"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/listTime2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_toEndOf="@id/listName2"
            android:text="@string/_06812103418"
            android:textColor="@color/black"
            android:textSize="15sp"
            tools:ignore="TextSizeCheck" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:layout_marginTop="160dp"
        tools:ignore="UselessParent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/listImage3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/fotopakandri"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded" />

        <TextView
            android:id="@+id/listName3"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/listImage3"
            android:text="@string/andrianto_gusti_pradana"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/listTime3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_toEndOf="@id/listName3"
            android:text=""
            android:textColor="@color/black"
            android:textSize="15sp"
            tools:ignore="TextSizeCheck" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:layout_marginTop="240dp"
        tools:ignore="UselessParent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/listImage4"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/fotobusari"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded" />

        <TextView
            android:id="@+id/listName4"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/listImage4"
            android:text="@string/widyasari_puspa_permata"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/listTime4"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_toEndOf="@id/listName4"
            android:text=""
            android:textColor="@color/black"
            android:textSize="15sp"
            tools:ignore="TextSizeCheck" />

    </RelativeLayout>

</RelativeLayout>